use css color-scheme. wrap chat text correctly

--- a/src/app/(pages)/chat.module.scss
+++ b/src/app/(pages)/chat.module.scss
@@ -20,7 +20,8 @@
 	padding: 0 8px;
 	margin: 8px 0;
 	max-width: calc(100svw - var(--player-width));
-	word-break: break-all;
+	white-space: pre-wrap;
+	word-break: break-word;
 }
 
 .messageUser {
