--- a/src/app/(pages)/globals.scss
+++ b/src/app/(pages)/globals.scss
@@ -109,6 +109,7 @@
 	--accent-shadow-color: #721114;
 	--accent2-color: #eded50;
 	--iframe-bg-color: #eeeeee;
+	color-scheme: dark;
 }
 
 body {
